feat: mod fed shared libs

--- a/apps/dashboard/project.json
+++ b/apps/dashboard/project.json
@@ -5,9 +5,7 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/dashboard",
         "index": "apps/dashboard/src/index.html",
@@ -18,9 +16,7 @@
           "apps/dashboard/src/favicon.ico",
           "apps/dashboard/src/assets"
         ],
-        "styles": [
-          "apps/dashboard/src/styles.css"
-        ],
+        "styles": ["apps/dashboard/src/styles.css"],
         "scripts": []
       },
       "configurations": {
@@ -85,17 +81,12 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/apps/dashboard"
-      ],
+      "outputs": ["coverage/apps/dashboard"],
       "options": {
         "jestConfig": "apps/dashboard/jest.config.ts",
         "passWithNoTests": true
       }
     }
   },
-  "tags": [
-    "type:app",
-    "domain:dashboard"
-  ]
+  "tags": ["type:app", "domain:dashboard"]
 }
