--- a/apps/flight-app-e2e/project.json
+++ b/apps/flight-app-e2e/project.json
@@ -16,18 +16,12 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "apps/flight-app-e2e/**/*.{js,ts}"
-        ]
+        "lintFilePatterns": ["apps/flight-app-e2e/**/*.{js,ts}"]
       }
     }
   },
   "tags": [],
-  "implicitDependencies": [
-    "flight-app"
-  ]
+  "implicitDependencies": ["flight-app"]
 }
