--- a/apps/luggage/project.json
+++ b/apps/luggage/project.json
@@ -5,9 +5,7 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/luggage",
         "index": "apps/luggage/src/index.html",
@@ -15,13 +13,8 @@
         "polyfills": "apps/luggage/src/polyfills.ts",
         "tsConfig": "apps/luggage/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": [
-          "apps/luggage/src/favicon.ico",
-          "apps/luggage/src/assets"
-        ],
-        "styles": [
-          "apps/luggage/src/styles.scss"
-        ],
+        "assets": ["apps/luggage/src/favicon.ico", "apps/luggage/src/assets"],
+        "styles": ["apps/luggage/src/styles.scss"],
         "scripts": []
       },
       "configurations": {
@@ -78,25 +71,17 @@
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
-        "lintFilePatterns": [
-          "apps/luggage/**/*.ts",
-          "apps/luggage/**/*.html"
-        ]
+        "lintFilePatterns": ["apps/luggage/**/*.ts", "apps/luggage/**/*.html"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/apps/luggage"
-      ],
+      "outputs": ["coverage/apps/luggage"],
       "options": {
         "jestConfig": "apps/luggage/jest.config.ts",
         "passWithNoTests": true
       }
     }
   },
-  "tags": [
-    "domain:luggage",
-    "type:app"
-  ]
+  "tags": ["domain:luggage", "type:app"]
 }
