--- a/libs/luggage/domain/project.json
+++ b/libs/luggage/domain/project.json
@@ -5,9 +5,7 @@
   "targets": {
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/libs/luggage/domain"
-      ],
+      "outputs": ["coverage/libs/luggage/domain"],
       "options": {
         "jestConfig": "libs/luggage/domain/jest.config.ts",
         "passWithNoTests": true
@@ -23,8 +21,5 @@
       }
     }
   },
-  "tags": [
-    "domain:luggage",
-    "type:domain-logic"
-  ]
+  "tags": ["domain:luggage", "type:domain-logic"]
 }
