--- a/libs/passenger/feature-edit/project.json
+++ b/libs/passenger/feature-edit/project.json
@@ -5,9 +5,7 @@
   "targets": {
     "build": {
       "executor": "@nrwl/angular:ng-packagr-lite",
-      "outputs": [
-        "dist/libs/passenger/feature-edit"
-      ],
+      "outputs": ["dist/libs/passenger/feature-edit"],
       "options": {
         "project": "libs/passenger/feature-edit/ng-package.json"
       },
@@ -23,9 +21,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/libs/passenger/feature-edit"
-      ],
+      "outputs": ["coverage/libs/passenger/feature-edit"],
       "options": {
         "jestConfig": "libs/passenger/feature-edit/jest.config.ts",
         "passWithNoTests": true
@@ -41,8 +37,5 @@
       }
     }
   },
-  "tags": [
-    "type:feature",
-    "domain:passenger"
-  ]
+  "tags": ["type:feature", "domain:passenger"]
 }
